content manager: updated test cases for validation support requests in controller and service class